# quickwebapp

./: .projections.json  Changelog  QuickWebApp.hs  README.md  default.nix  quickwebapp.cabal  shell.nix
