name:                quickwebapp
version:             1.0.0.0
synopsis:            A quick webapp generator for any file processing tool
description:
    A quick-and-dirty api generator, for any function 'Text -> Text'.
    Inspired from the 'interact' function from 'Prelude'.
    .
    > interactWeb [ reverse ]
    .
    This creates a server listening on port 3000. A 'GET' request on the server
    returns a JSON file containing all the endpoints
    (here, we would have "[ "convert" ]").
    .
    One can specify the name of the endpoint and content type with '<?>' and
    '<::>':
    .
    > interactWeb [ reverse <?> "reverse" <::> "text/plain"
    >             , id <?> "echo" <::> "text/rtf"
    >             ]
    .
license:             GPL-3
license-file:        LICENSE
author:              Julien Tanguy
maintainer:          julien.tanguy@jhome.fr
category:            Web
build-type:          Simple
extra-source-files:  Changelog
cabal-version:       >=1.10

library
  exposed-modules:     QuickWebApp
  build-depends:       base >=4.7 && <4.8,
                       text,
                       aeson,
                       bytestring,
                       mime-types,
                       scotty
  -- hs-source-dirs:      src
  default-language:    Haskell2010
